2010-02-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Implement regex backreference replacement for \0 (whole match) and
   groups \1 to \9.


2010-02-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/document.c:
   Implement single POSIX regex replacement - escape replacements are
   done with utils_str_replace_escape().
   Warning: regex backreference replacement is still to do.
   Make utils_str_replace_escape() accept unnecessary escapes (e.g.
   '\e' goes to 'e').


2010-02-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, doc/geany.txt, doc/geany.html:
   Make Switch to Editor keybinding reshow the document statistics
   line, so user doesn't have to move the cursor.
 * src/document.c:
   Make Find dialog Next button use GNU/system regex instead of
   Scintilla engine.


2010-02-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetypes.r:
   Update keywords for the R language (patch by Jon Senior, thanks).


2010-02-21  Dominic Hopf  <dmaphy(at)googlemail(dot)com>

 * doc/geany.txt:
   Fix the instruction how to insert unicode characters
   (thanks Tony Rick).


2010-02-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scripts/create_py_tags.py:
   Minor fixes.
   Replace tabs by spaces.
 * plugins/genapi.py:
   Minor fixes.
   Replace tabs by spaces.
 * tagmanager/r.c, plugins/geanyfunctions.h, src/about.c,
   src/filetypes.c, src/symbols.c, tagmanager/Makefile.am,
   tagmanager/makefile.win32, tagmanager/parsers.h, wscript, THANKS:
   Add R tagmanager symbol parser (patch by Jon Senior, thanks).
 * doc/geany.html, doc/geany.txt, src/keybindings.c, src/keybindings.h,
   src/plugindata.h, src/sidebar.c, src/sidebar.h:
   Add keybindings to switch to the sidebar's Document and Symbol list
   as well as to the Message Window's current tab
   (patch by Eugene Arshinov, thanks).
 * data/filetypes.r: