@@ -957,9 +957,12 @@ on_find_replace_checkbutton_toggled(GtkToggleButton *togglebutton, gpointer user
 		GtkWidget *check_wordstart = ui_lookup_widget(dialog, "check_wordstart");
 		GtkToggleButton *check_case = GTK_TOGGLE_BUTTON(
 			ui_lookup_widget(dialog, "check_case"));
+		GtkWidget *check_escape = ui_lookup_widget(dialog, "check_escape");
 		static gboolean case_state = FALSE; /* state before regex enabled */
 
 		/* hide options that don't apply to regex searches */
+		gtk_widget_set_sensitive(check_escape, ! regex_set);
+
 		if (dialog == find_dlg.dialog)
 			gtk_widget_set_sensitive(ui_lookup_widget(dialog, "btn_previous"), ! regex_set);
 		else
@@ -1072,17 +1075,17 @@ on_find_dialog_response(GtkDialog *dialog, gint response, gpointer user_data)
 
 		g_free(search_data.text);
 		search_data.text = g_strdup(gtk_entry_get_text(GTK_ENTRY(gtk_bin_get_child(GTK_BIN(user_data)))));
+		search_data.flags = get_search_flags(find_dlg.dialog);
+
 		if (strlen(search_data.text) == 0 ||
-			(search_replace_escape && ! utils_str_replace_escape(search_data.text)))
+			((search_replace_escape || search_data.flags & SCFIND_REGEXP) &&
+				! utils_str_replace_escape(search_data.text)))
 		{
 			utils_beep();
 			gtk_widget_grab_focus(find_dlg.entry);
 			return;
 		}
-
 		ui_combo_box_add_to_history(GTK_COMBO_BOX(user_data), search_data.text);
-
-		search_data.flags = get_search_flags(find_dlg.dialog);
 
 		switch (response)
 		{
@@ -1212,7 +1215,7 @@ on_replace_dialog_response(GtkDialog *dialog, gint response, gpointer user_data)
 	ui_combo_box_add_to_history(GTK_COMBO_BOX(
 		gtk_widget_get_parent(replace_dlg.replace_entry)), replace);
 
-	if (search_replace_escape_re &&
+	if ((search_replace_escape_re || search_flags_re & SCFIND_REGEXP) &&
 		(! utils_str_replace_escape(find) || ! utils_str_replace_escape(replace)))
 	{
 		utils_beep();
